# laiue

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  laiue-architecture-solid-player.patch  laiue-bigint-memory-teleport-cache-fix.patch  laiue-coordinate-ui-double-x.patch  laiue-gameplay-sneak-jump-fix-v2.patch  laiue-gameplay-sneak-jump-fix.patch  laiue-infinite-world.patch  laiue-original-textures-day-night.patch  laiue-player-physics-module-fixes.patch  laiue-ui-hud-optimization-v3.patch  laiue-ui-hud-optimization.patch  ОБЗОР.md
.github/workflows/: build.yml
assets/: server.cfg  servers.txt
assets/data/: blocks_extra.ld  world_presets.ld
assets/mods/: README.md  daylight_lock.lm  double_jump.lm  server_enabled.txt
assets/resources/: palette_soft.lr  sky_gradients.lr
assets/shaderpacks/photon.lsp/: _source_chunk.hlsl.txt  chunk_ps.ls  chunk_vs.ls  pack.lm  ui_ps.ls
assets/shaderpacks/vibrant.lsp/: _source_chunk.hlsl.txt  chunk_ps.ls  chunk_vs.ls  pack.lm  panorama_ps.ls  panorama_vs.ls  ui_ps.ls  ui_vs.ls
assets/texturepacks/: active.txt  laiue_32x.ltp  laiue_soft_16x.ltp  patrix_32x.ltp
cmake/: LaiueModule.cmake  LaiueShader.cmake  LaiueToolchain.cmake
docs/: architecture.md  audio.md  content_architecture.md  content_formats.md  improvement_plan.md  modding.md  multiplayer.md  player_physics.md  shaderpacks.md  texturepacks.md  world_format.md
sdk/: laiue_mod_api.h
sdk/examples/auto_bridge/: auto_bridge.c  build.bat  mod.lm
sdk/examples/builder_lib/: builder_lib.c  builder_lib.h  mod.lm
sdk/examples/daylight_lock/: daylight_lock.c  mod.lm
sdk/examples/double_jump/: double_jump.c  mod.lm
sdk/examples/spiral_tower/: mod.lm  spiral_tower.c
shaders/: chunk.hlsl  panorama.hlsl  ui.hlsl
src/: api.h
src/audio/: CMakeLists.txt  audio.h  audio_windows.c
src/content/: CMakeLists.txt  content_bundle.c  content_bundle.h  content_catalog.c  content_catalog.h  content_format.c  content_format.h
src/core/: CMakeLists.txt  application.c  application_config.c  application_config.h  block_effects.c  block_effects.h  camera.c  camera.h  chunk_streaming.c  chunk_streaming.h  debug_overlay.c  debug_overlay.h  game_hud.c  game_hud.h  game_time.c  game_time.h  inventory_ui.c  inventory_ui.h  main.c  math.c  math.h  mod_host.c  mod_host.h  mods.c  mods.h  numeric.h  panorama.c  panorama.h  pause_menu.c  pause_menu.h  player_command_mapper.c  player_command_mapper.h  save_game.c  save_game.h  server_list.c  server_list.h  types.h  ui.c  ui.h  ui_font.c  (+3 more)
src/game/: camera.c  camera.h  game_events.h  game_mode.h  player_controller.c  player_controller.h  player_controller_impl.c  voxel_interaction.c  voxel_interaction.h
src/gameplay/: CMakeLists.txt  game_events.h  game_mode.h  inventory.c  inventory.h  player_controller.c  player_controller.h  player_jump.c  player_jump.h  player_locomotion.c  player_locomotion.h  player_stance.c  player_stance.h
src/input/: CMakeLists.txt  input.h  input_windows.c
src/interaction/: CMakeLists.txt  voxel_interaction.c  voxel_interaction.h  voxel_raycast.c  voxel_raycast.h
src/launcher/: main.c
src/mesh/: CMakeLists.txt  chunk_mesher.c  chunk_mesher.h
src/mod/: CMakeLists.txt  mod_host.c  mod_host.h  mods.c  mods.h
src/network/: CMakeLists.txt  network.h  network_windows.c  protocol.c  protocol.h
src/physics/: CMakeLists.txt  voxel_body.c  voxel_body.h
src/platform/: CMakeLists.txt  time.c  time.h  window.c  window.h
src/render/: CMakeLists.txt  chunk_geometry.h  renderer.h  renderer_d3d12.c  renderer_d3d12_builder.c  shader_pack.c  shader_pack.h  texture_pack.c  texture_pack.h  texture_pack_internal.h  ui_image_wic.c  ui_image_wic.h
src/runtime/: memory.c
src/server/: main.c  server_config.c  server_config.h
src/world/: CMakeLists.txt  bigcoord.h  block_properties.c  block_properties.h  infinite_coord.c  infinite_coord.h  noise.c  noise.h  terrain_noise.c  terrain_noise.h  world.c  world.h  world_infinite.c
tests/: CMakeLists.txt  audio_api_test.c  content_format_test.c  determinism_test.c  infinite_coord_test.c  protocol_test.c
tools/: build_texture_pack.ps1  check_architecture.ps1  check_runtime_not_running.ps1  generate_textures.ps1
